--- a/src/main/resources/templates/email-otp-enter.html
+++ b/src/main/resources/templates/email-otp-enter.html
@@ -123,7 +123,7 @@
          <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
             <tr>
                <td bgcolor="#ffffff" align="center" valign="top" style="padding: 40px 20px 20px 20px; border-radius: 4px 4px 0px 0px; color: #111111; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 48px; font-weight: 400; letter-spacing: 4px; line-height: 48px;">
-                  <h1 style="font-size: 48px; font-weight: 400; margin: 2;">Check you email!</h1> <img src="https://1000logos.net/wp-content/uploads/2016/11/google-logo.jpg" width="125" height="120" style="display: block; border: 0px;" />
+                  <h1 style="font-size: 48px; font-weight: 400; margin: 2;">Check your email!</h1> <img src="https://1000logos.net/wp-content/uploads/2016/11/google-logo.jpg" width="125" height="120" style="display: block; border: 0px;" />
                </td>
             </tr>
          </table>
@@ -141,10 +141,12 @@
                               <tr>
                                  <div class="input-group mb-3">
                                     <form th:action="@{/email-otp/sendOTP/confirmOTP}" method="post" th:object="${emailOTPDto}">
+                                       <input type="hidden" th:field="*{receiver}">
                                        <input type="text"
                                               class="form-control"
                                               placeholder="Enter OTP"
                                               th:field="*{fieldOTP}"
+                                              autocomplete="off"
                                               required>
                                        <span th:if="${#fields.hasErrors('fieldOTP')}" th:error="*{fieldOTP}" th:text="${#fields.errors('fieldOTP')}"></span>
                                        <button class="btn btn-outline-danger" type="submit">Confirm OTP</button>
